<resources>
    <string name="app_name">Daniel_Karp_Millionare_M4_V2</string>
    <string name="who_wants_to_be_a_millionare">Who Wants to be a Millionare?</string>
    <string name="click_here_to_begin">Click Here to Begin</string>
    <string name="answer_10_questions_in_a_row_to_win_1_million">Answer 10 questions in a row to win $1 million!</string>
    <string name="money_won_0">Money Won: $0</string>
    <string name="what_is_8_2">What is 8 + 2?</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="_14">14</string>
    <string name="_6">6</string>
    <string name="game_over_you_got_the_question_wrong">Game Over! You got the question wrong!</string>
    <string name="restart">Restart</string>
    <string name="last_question_was_correct">Last Question was Correct!</string>
    <string name="money_won_100_000">Money Won: $100,000</string>
    <string name="what_coastline_is_new_jersey_closest_to">What coastline is New Jersey closest to?</string>
    <string name="eastern_coastline">Eastern Coastline</string>
    <string name="western_coastline">Western Coastline</string>
    <string name="northern_coastline">Northern Coastline</string>
    <string name="southern_coastline">Southern Coastline</string>
    <string name="money_won_200_000">Money Won: $200,000</string>
    <string name="in_what_u_s_state_can_you_visit_the_everglades">In what U.S. state can you visit the Everglades?</string>
    <string name="missouri">Missouri</string>
    <string name="texas">Texas</string>
    <string name="florida">Florida</string>
    <string name="california">California</string>
    <string name="money_won_300_000">Money Won: $300,000</string>
    <string name="what_animal_is_closely_related_to_a_house_dog">What animal is closely related to a house dog?</string>
    <string name="lion">Lion</string>
    <string name="wolf">Wolf</string>
    <string name="tiger">Tiger</string>
    <string name="cheetah">Cheetah</string>
    <string name="money_won_500_000">Money Won: $500,000</string>
    <string name="who_was_the_third_u_s_president">Who was the third U.S. President?</string>
    <string name="abraham_lincoln">Abraham Lincoln</string>
    <string name="john_adams">John Adams</string>
    <string name="thomas_jefferson">Thomas Jefferson</string>
    <string name="john_quincy_adams">John Quincy Adams</string>
    <string name="money_won_600_000">Money Won: $600,000</string>
    <string name="when_does_a_leap_year_occur">When does a leap year occur?</string>
    <string name="every_4_years">Every 4 years</string>
    <string name="every_6_years">Every 6 years</string>
    <string name="every_2_years">Every 2 years</string>
    <string name="every_8_years">Every 8 years</string>
    <string name="money_won_700_000">Money Won: $700,000</string>
    <string name="how_many_hearts_does_an_octopus_have">How many hearts does an octopus have?</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="money_won_800_000">Money Won: $800,000</string>
    <string name="what_is_the_highest_selling_video_game_of_all_time">What is the highest selling video game of all time?</string>
    <string name="minecraft">Minecraft</string>
    <string name="grand_theft_auto_v">Grand Theft Auto V</string>
    <string name="wii_sports">Wii Sports</string>
    <string name="tetris">Tetris</string>
    <string name="money_won_900_000">Money Won: $900,000</string>
    <string name="which_country_won_the_first_world_cup_tournament">Which country won the first World Cup tournament?</string>
    <string name="england">England</string>
    <string name="brazil">Brazil</string>
    <string name="uruguay">Uruguay</string>
    <string name="spain">Spain</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_won_1_million">You won $1 million!!</string>
    <string name="return_to_start_screen">Return to Start Screen</string>
    <string name="money_won_400_000">Money Won: $400,000</string>
    <string name="who_discovered_electricity">Who discovered electricity?</string>
    <string name="albert_einstein">Albert Einstein</string>
    <string name="thomas_edison">Thomas Edison</string>
    <string name="benjamin_franklin">Benjamin Franklin</string>
    <string name="george_washington">George Washington</string>
</resources>