<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".MainActivity5">

    <!--Lets the player know that they are moving on in the game-->
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="121dp"
        android:text="@string/last_question_was_correct"
        android:textColor="#FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Shows how much money has been won-->
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="136dp"
        android:text="@string/money_won_200_000"
        android:textColor="#89FF01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Box that contains the questions is created-->
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="60dp"
        android:text="@string/in_what_u_s_state_can_you_visit_the_everglades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <!--1st Answer Box-->
    <Button
        android:id="@+id/button11"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="31dp"
        android:onClick="btn_click3"
        android:text="@string/missouri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="VisualLintButtonSize" />

    <!--2nd Answer Box-->
    <Button
        android:id="@+id/button12"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="31dp"
        android:onClick="btn_click3"
        android:text="@string/texas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11"
        tools:ignore="VisualLintButtonSize" />

    <!--3rd Answer Box-->
    <Button
        android:id="@+id/button13"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="31dp"
        android:onClick="btn_click5"
        android:text="@string/florida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        tools:ignore="VisualLintButtonSize" />

    <!--4th Answer Box-->
    <Button
        android:id="@+id/button14"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="31dp"
        android:onClick="btn_click3"
        android:text="@string/california"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>