<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".MainActivity6">

    <!--Lets the player know that they are moving on in the game-->
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="120dp"
        android:text="@string/last_question_was_correct"
        android:textColor="#FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Shows how much money has been won-->
    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="136dp"
        android:text="@string/money_won_300_000"
        android:textColor="#89FF01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <!--Box that contains the questions is created-->

    <!--1st Answer Box-->
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="60dp"
        android:text="@string/what_animal_is_closely_related_to_a_house_dog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/button15"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="28dp"
        android:onClick="btn_click3"
        android:text="@string/lion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="VisualLintButtonSize" />

    <!--2nd Answer Box-->
    <Button
        android:id="@+id/button16"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:onClick="btn_click6"
        android:text="@string/wolf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15"
        tools:ignore="VisualLintButtonSize" />

    <!--3rd Answer Box-->
    <Button
        android:id="@+id/button17"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:onClick="btn_click3"
        android:text="@string/tiger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button16"
        tools:ignore="VisualLintButtonSize" />

    <!--4th Answer Box-->
    <Button
        android:id="@+id/button18"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:onClick="btn_click3"
        android:text="@string/cheetah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>