<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".MainActivity12">

    <!--Lets the player know that they are moving on in the game-->
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="120dp"
        android:text="@string/last_question_was_correct"
        android:textColor="#FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Shows how much money has been won-->
    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="136dp"
        android:text="@string/money_won_900_000"
        android:textColor="#89FF01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <!--Box that contains the questions is created-->
    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="45dp"
        android:text="@string/which_country_won_the_first_world_cup_tournament"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <!--1st Answer Box-->
    <Button
        android:id="@+id/button36"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="28dp"
        android:onClick="btn_click3"
        android:text="@string/england"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        tools:ignore="VisualLintButtonSize" />

    <!--2nd Answer Box-->
    <Button
        android:id="@+id/button37"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:onClick="btn_click3"
        android:text="@string/brazil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button36"
        tools:ignore="VisualLintButtonSize" />

    <!--3rd Answer Box-->
    <Button
        android:id="@+id/button38"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:onClick="btn_click12"
        android:text="@string/uruguay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button37"
        tools:ignore="VisualLintButtonSize" />

    <!--4th Answer Box-->
    <Button
        android:id="@+id/button39"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:onClick="btn_click3"
        android:text="@string/spain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button38"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>